Added new method to Ticket class
